# unleash-rust-sdk

./: Cargo.toml  README.md
.github/workflows/: ci-matrix.yml  publish.yaml
benches/: is_enabled.rs
crates/unleash-api-client/: Cargo.toml
crates/unleash-api-client-macros/: Cargo.toml
crates/unleash-api-client-macros/src/: lib.rs
crates/unleash-api-client-macros/tests/: trybuild.rs
crates/unleash-api-client-macros/tests/ui/fail/: duplicated_attrs.rs  duplicated_attrs.stderr  name_matches_literal.rs  name_matches_literal.stderr  non_unit.rs  non_unit.stderr  same_name.rs  same_name.stderr  wrong_form.rs  wrong_form.stderr
crates/unleash-api-client-macros/tests/ui/pass/: basic.rs
crates/unleash-api-client/benches/: is_enabled.rs
crates/unleash-api-client/examples/: async-std.rs  threads.rs  tokio.rs
crates/unleash-api-client/src/: client.rs  http.rs  lib.rs  strategy.rs
examples/: async-std.rs  threads.rs  tokio.rs
src/: client.rs  context.rs  http.rs  lib.rs  strategy.rs  version.rs
tests/: clientspec.rs
