[package]
name = "unleash-api-client-macros"
authors = ["Simon Hornby <simon@getunleash.io>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Proc macros for unleash-api-client"
license = "Apache-2.0"
repository = "https://github.com/Unleash/unleash-rust-sdk/"
homepage = "https://github.com/Unleash/unleash-rust-sdk/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"